# Hyleg

./: README.md  plot.SLDPRT
STM32/TEST/: .mxproject  .project
STM32/TEST/.metadata/: .log4j.xml  version.ini
STM32/TEST/Inc/: can.h  stm32f4xx_hal_conf.h
STM32/TEST/Src/: can.c  gpio.c  main.c  stm32f4xx_hal_msp.c
STM32/TEST/UP_TEST/: .cproject  .mxproject  .project  UP_TEST.ioc
STM32/UP_TEST/: .cproject  .mxproject  .project  DAP_Debug.launch  UP_TEST Debug.launch  UP_TEST.ioc
STM32/UP_TEST/DAP/: CMSIS_DAP_stm32f4x.cfg
STM32/UP_TEST/Debug/: UP_TEST.elf  UP_TEST.list  UP_TEST.map  makefile  objects.list  objects.mk  sources.mk
STM32/UP_TEST/Math/: base_struct.h  common_math.c
STM32/workspace/.metadata/: .log4j2.xml  version.ini
STM32/workspace/BottomBoard/: .cproject  .mxproject  .project  BottomBoard Debug.launch  BottomBoard.ioc  BottomBoard.launch  OpenOCD Debug.cfg
STM32/workspace/UP_TEST/: .cproject  UP_TEST Debug.launch
images/: plot.SLDPRT
odroid/Hyleg/MainControl/: CMakeLists.txt
odroid/Hyleg/hyleg_guide/: CMakeLists.txt
odroid/MainControl/: CMakeLists.txt
odroid/MainControl/inc/FSM/: FSM.h  FSMState.h  State_FixedStand.h  State_Horizonal.h  State_Passive.h  State_SwingTest.h  State_Walking.h
odroid/MainControl/inc/Gait/: FeetEndCal.h  GaitGenerator.h  WaveGenerator.h
odroid/MainControl/inc/SPI/: Tmotor.h  comm.h  hyleg_sdk.h  spi.h  sys_time.h
odroid/MainControl/inc/UART/: uart_communicate.h
odroid/MainControl/inc/common/: HyLeg.h  HylegRobot.h  enumClass.h  mathTools.h  mathTypes.h
odroid/MainControl/inc/control/: BalanceCtrl.h  CtrlComponents.h  ErrorCtrl.h  Estimator.h  ValveCtrl.h
odroid/MainControl/inc/dataProcess/: DataRecord.h  ShareData.h
odroid/MainControl/inc/interface/: CmdPanel.h  IOSDK.h
odroid/MainControl/inc/message/: LowlevelCmd.h  LowlevelState.h
odroid/MainControl/ref/memerey_task/src/: main.cpp  sys_timer.cpp
odroid/MainControl/ref/navigation_task/: CMakeLists.txt
odroid/MainControl/ref/navigation_task/src/: main.cpp
odroid/MainControl/ref/servo_task/inc/: spi_node.h
odroid/MainControl/ref/servo_task/src/: main.cpp
odroid/MainControl/src/: main.cpp  spi_test.cpp  test.cpp
odroid/MainControl/src/FSM/: FSM.cpp  FSMState.cpp  State_FixedStand.cpp  State_Horizon.cpp  State_Passive.cpp  State_SwingTest.cpp  State_Walking.cpp
odroid/MainControl/src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
odroid/MainControl/src/SPI/: comm.c  spi.cpp  sys_timer.cpp
odroid/MainControl/src/UART/: uart_communicate.cpp
odroid/MainControl/src/common/: HyLeg.cpp  HylegRobot.cpp
odroid/MainControl/src/control/: BalanceCtrl.cpp  ControlFrame.cpp  ErrorCtrl.cpp  Estimator.cpp  ValveCtrl.cpp
odroid/MainControl/src/dataProcess/: DataRecord.cpp  ShareData.cpp
odroid/MainControl/src/interface/: IOSDK.cpp  KeyBoard.cpp
odroid/MainControl/src/message/: LowlevelCmd.cpp
odroid/hardware_task2/: CMakeLists.txt
odroid/hardware_task2/inc/: serial.hpp  spi.h  spi_node.h
odroid/hardware_task2/src/: main.cpp  serial.cpp  spi.cpp
simulate/: B.txt  DemoAnimation.m  FK.m  IK.asv  IK.m  Jacobian.m  PLOT.m  SPI.txt  calcPEe2H.m  calculate.asv  calculate.m  data_process.m  data_stanceF_process.m  data_swingF_process.m  error.txt  simulatedata.txt  stand_trajectory.mat  swing_trajectory.mat  trajectory.m  untitled.m
simulate/DATA/: circle2.txt  horizontal_0.0MPa_5kg.txt  horizontal_0.2MPa_5kg.txt  horizontal_0.3MPa_0kg.txt  horizontal_0.4MPa_0kg.txt  horizontal_0.4MPa_10kg.txt  horizontal_0.4MPa_15kg.txt  horizontal_0.5MPa_0kg.txt  horizontal_0.5MPa_5kg.txt  trajectory3.txt  vertiacal_0.0MPa_0kg.txt  walk_0.0MPa_0kg.txt  walk_0.2MPa_0kg (2).txt  walk_0.2MPa_0kg.txt  walk_0.2MPa_2.5kg.txt  walk_0.2MPa_5kg.txt  walk_0.3MPa_10kg.txt  walk_0.3MPa_2.5kg.txt  walk_0.3MPa_5kg.txt  walk_0.4MPa_15kg.txt  walk_0.4MPa_5kg.txt  walk_0.5MPa_10kg.txt
simulate/data_stanceF/: F_a0001_b01.txt  F_a0001_b03.txt  F_a0001_b06.txt  F_a001_b01.txt  position+feedback_v0.csv  position+vel+feedback_v0.csv  position+vel+feedback_v0_2.csv  position+vel+feedback_v0_kd08_2.csv  position+vel_v0.csv  position+vel_v0_2.csv  position+vel_v0_3.csv
simulate/data_swingF/: 111.txt  circle_KP0_KD0.csv  circle_KP100_KD0.csv  circle_KP200_KD0.csv  circle_KP200_KD50.csv  circle_KP300_KD0.csv  cycloid_KP0_KD0.csv  cycloid_KP0_KD10.csv  cycloid_KP0_KD5.csv  cycloid_KP100_KD0.csv  cycloid_KP200_KD0.csv  cycloid_KP300_KD0.csv  cycloid_KP300_KD10.csv  cycloid_KP500_KD1.csv  position+feedback_K0.csv  position+feedback_K40.csv  position+feedback_K80.csv  position+feedback_v10_K40.csv  position+feedback_v10_K80.csv  position+vel+feedback_v10.csv  position+vel_v10.csv  position.csv  position_v10.csv  sqaure_KP0_KD0.csv  sqaure_KP100_KD0.csv  sqaure_KP200_KD0.csv  sqaure_KP200_KD50.csv  sqaure_KP300_KD0.csv  位置控制1.txt  新建 文本文档.txt
simulate/data_swingtest/: swich.txt  walking_2.txt  walking_3.txt  walking_real.txt  walking_v&qd.txt  walking_v0.02.txt  walking_v0.04.txt  walking_v0_1.txt  walking_v10_1.txt  walking_v10_2.txt  walking_v20_1.txt  walking_v2_1.txt  walking_v40_1.txt  wave_0.5_1.txt  wave_0.6_1.txt  wave_0.6_2.txt
simulate/matlab/: C.txt  FK.m  HorizonPlot.m  IK.m  PLOT.m  WalkPlot.m  calculate.m  current_process.m  data_process.m  error_current.m  torque.m  trajectory.m  walk_dataInput.m  whole_model.slx
(+524 files in other folders)
